--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,11 @@
 			const socket = io();
 
 			socket.on("newImage", function(data) {
-				console.log("Received new data.");
+				loadImage(data, function(result) {
+					img = result;
+					initImage();
+				});
+				console.log("Received new url: " + data);
 			});
 
 			function preload() {
@@ -69,6 +73,10 @@
 		        m = createVector(0, 0);
 		        pm = createVector(0, 0);
 
+		       	initImage();
+		    }
+
+		    function initImage() {	    	
 		        if (img.width > img.height) {
 		        	let ratio = img.width / img.height;
 		        	img.resize(sW * ratio, sW);
@@ -143,7 +151,7 @@
 			        	noise._playbackRate = dist / 500;
 			        	autoFilter.min = dist;
 			        	autoFilter.max = dist * 20;
-			        	console.log(noise.volume.value + ", " + dist);
+			        	//console.log(noise.volume.value + ", " + dist);
 			        }
 
 			        matte.ellipse(m.x, m.y, dist);
@@ -173,66 +181,6 @@
 
 			function windowResized() {
 				resizeCanvas(windowHeight, windowHeight);
-			}
-
-			let query = "";
-			let responseImg;
-
-			function queryImage(_q) {
-			  const url = "https://ajax.googleapis.com/ajax/services/search/images?v=1.0&q=" + _q;
-			  console.log(url);
-			  //loadJSON(url, imageResult);
-			}
-
-			function imageResult(result) {
-				//make sure the results are not an error
-				const status = result["responseStatus"];
-				console.log(status);
-				/*
-				if (status != 200) {
-				var reason = result.getString("responseDetails");
-				//this sucks that google does not allow you to do very many of these in a row
-				println("You are too fast, take a break." + reason);
-				return;
-				}
-				//go one level down in to the results to just get the data not the info about the package
-				var response = result.getJSONObject("responseData");
-				println(response);
-				//get the arrary of stuff you got back
-				var values = response.getJSONArray("results");
-				var vOffset = 20;
-				for (int i = 0; i < min(values.size(),3); i++) {
-				//pick out the picture information for each picture
-				var thisGuy = values.getJSONObject(i); 
-				var r = thisGuy.getString("url");
-				var w = thisGuy.getInt("tbWidth");
-				var h = thisGuy.getInt("tbHeight");
-				println(r + " "+ w + " " + h );
-				var thisImage = loadImage(r);
-				if (thisImage != null) {
-				image(thisImage, 10, vOffset, w, h);
-				}
-				else {
-				text((i + 1) + " key", 10, vOffset+13);
-				rect(10, vOffset, w, h);
-				}
-				//make vOffset bigger so we will draw the next picture below this one.
-				vOffset  += h;
-
-				}//end for
-				*/
-			}
-
-			function keyPressed() {
-				if (keyCode === RETURN || keyCode === ENTER) {
-					background(0);
-					queryImage(query); // execute the query
-					query = "";  // clear the query
-				} else if (keyCode > 48 && keyCode < 123) {  // letters and numbers only
-					query += key;
-					fill(255);
-					text(query, 100, 100);  // draw the query so far on the scrren
-				}
 			}
 		</script>
 	</body>
